# max-7219-led-matrix-util

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  check-build.sh
.github/workflows/: rust.yml
examples/: demo.rs
src/: encoding.rs  lib.rs  mappings.rs  setup.rs
