[package]
name = "max-7219-led-matrix-util"
version = "0.2.3"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
exclude = [
    "demo.gif",
    "demo.mp4",
    ".travis.yml",
]
keywords = ["gpio", "max7219", "ledcontrol"]
categories = ["hardware-support", "no-std"]
description = """
Simple `no_std`-utility-library using 'max7219'-crate for LED matrix displays with optional easy setup functions for Linux (Raspberry Pi).
"""
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/max-7219-led-matrix-util"
repository = "https://github.com/phip1611/max-7219-led-matrix-util"
documentation = "https://docs.rs/max-7219-led-matrix-util/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["gpio-cdev"]

[dependencies]
gpio-cdev = { version = "0.4.0", optional = true }
embedded-hal = "0.2.4"
max7219 = "0.3.0"
